--- a/Rock-Paper-Scissor/src/App.css
+++ b/Rock-Paper-Scissor/src/App.css
@@ -1,42 +1,26 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  inset: 0;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+main {
+  max-height: 100vh;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.background_img {
+  z-index: -1;
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  background-size: contain;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.container {
+  position: absolute;
+  height: 80vh;
+  width: 80%;
+  margin: 4.5em auto;
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 5%;
+  display: flex;
+  overflow: hidden;
 }
