--- a/Rock-Paper-Scissor/client/src/css/room.module.css
+++ b/Rock-Paper-Scissor/client/src/css/room.module.css
@@ -1,30 +1,3 @@
-.room {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  background: linear-gradient(90deg, rgba(249, 249, 43, 0.998), rgb(154, 2, 2));
-}
-
-.hr {
-  width: 5px;
-  background-color: black;
-  border: 0px solid black;
-}
-
-.left,
-.right {
-  width: 48%;
-  margin: 0 3em;
-}
-
-/* Control Options */
-.controls_div {
-  position: absolute;
-  top: 80%;
-  left: 33%;
-}
-
 .scissor_button,
 .rock_button,
 .paper_button {
@@ -42,7 +15,6 @@
   border: 3px solid black;
   box-shadow: 0 0 20px black inset;
   box-shadow: 0 0 20px black;
-  /* filter: drop-shadow(10px 10px 1px black);*/
 }
 
 .scissor_button {
@@ -52,27 +24,23 @@
   background: center / contain no-repeat url("/Paper.png") rgb(0, 0, 0);
 }
 .rock_button {
-  background: center / contain no-repeat url("/Rock.png") rgb(16, 9, 0);
-}
-
-/* Top Profile */
-.topProfile {
-  margin: 0.5em 1em;
-  width: 100%;
+  background: center / contain no-repeat url("/Rock.png") rgb(0, 0, 0);
 }
 
 .profile,
 .profileR {
+  color: white;
   padding: 0.2em;
   margin: 0 0.2em 0 0;
   font-size: 3.5em;
-  border: 5px solid black;
+  border: 5px solid rgb(255, 255, 255);
   border-radius: 10%;
 }
 
 .star,
 .starR {
   font-size: 2em;
+  color: white;
 }
 
 .profileR {
@@ -84,21 +52,4 @@
   position: relative;
   left: 39%;
   font-size: 2em;
-}
-
-/* Control Image */
-.control,
-.controlR {
-  width: auto;
-  height: 70%;
-}
-
-.control {
-  transform: rotate(90deg) translateY(-125px);
-  filter: drop-shadow(20px 20px 10px black);
-}
-
-.controlR {
-  transform: rotate(270deg) translateY(175px);
-  filter: drop-shadow(-20px -20px 10px black);
 }
